<resources>
    <string name="app_name">Notes</string>
    <string name="text_button_save">Save</string>
    <string name="text_button_back">Back</string>
    <string name="ass_menu_text">New note</string>
    <string name="text_button_delete">Delete</string>
    <string name="text_button_exit">Exit</string>
    <string name="text_button_date">Set data</string>
    <string name="hint_title_note">Title</string>
    <string name="hint_date_note">Data</string>
    <string name="hint_note">NOTE</string>
    <string name="text_popup_menu_for_note_in_list_delete">Delete</string>
    <string name="text_popup_menu_for_note_in_list_edit">Edit</string>
    <string name="exit_menu_text">EXIT</string>
    <string name="search_menu_text">Search</string>
    <string name="exit_dialog_message">Do you want to close app?</string>
    <string name="text_button_no">No</string>
    <string name="text_button_yes">Yes</string>
    <string name="nav_header_title">Notes APP</string>
    <string name="nav_header_subtitle">by MK</string>
    <string name="menu_home">About APP</string>
    <string name="about_text">ABOUT</string>
    <string name="navigation_drawer_open">drawer_open</string>
    <string name="navigation_drawer_close">drawer_close</string>
    <string-array name="importance">
        <item>High</item>
        <item>Medium</item>
        <item>Low</item>
    </string-array>
</resources>