<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_for_edit_note"
    android:orientation="vertical">

    <EditText
        android:id="@+id/title_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_title"
        android:textColor="@color/text_color_note"
        android:hint="@string/hint_title_note"
        android:textSize="@dimen/text_size_title" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/date_note"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_title"
            android:hint="@string/hint_date_note"
            android:ems="10"
            android:inputType="date" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/button_margin"
            android:backgroundTint="@color/background_button"
            android:text="@string/text_button_date"
            app:cornerRadius="@dimen/corner_radius_button_note" />

    </LinearLayout>

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_title"
        android:entries="@array/importance" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/note"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:lines="5"
                android:layout_margin="@dimen/margin_note"
                android:textColor="@color/text_color_note"
                android:hint="@string/hint_note"
                android:textSize="@dimen/text_size_note" />
        </LinearLayout>


    </ScrollView>

    <View
        android:id="@+id/divider3"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="?android:attr/listDivider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_save"
            style="@style/ButtonStyle"
            android:text="@string/text_button_save" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_back"
            style="@style/ButtonStyle"
            android:text="@string/text_button_back" />

    </LinearLayout>
</LinearLayout>